# Matching_Engine

./: .gitignore  CMakeLists.txt  GTK.md  README.md  TODO.txt  Useful_commands.md  Useful_commands.txt
.github/workflows/: ci.yaml
db/: matching_engine.db
include/domain/: order.hpp  price.hpp  side.hpp
include/engine/: engine.hpp  model.hpp
include/server/: matching_engine_service.hpp
include/storage/: storage.h  storage.hpp
include/utils/: strings.hpp
proto/: matching_engine.proto  matching_engine_service.proto  trading_engine.proto
scripts/: smoke.ps1
src/client/: client.cpp
src/engine/: engine.cpp  model.cpp  tmp.cpp
src/server/: engine_impl.cpp  main.cpp  matching_engine_service.cpp  server.cpp
src/storage/: storage.cpp
src/utils/: strings.cpp
tests/: test_price.cpp  test_submit_order.cpp
